@@ -8,58 +8,52 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.assertj.core.api.Assertions;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonValue;
 
-@RunWith(Parameterized.class)
 public class SjekkDtoStrukturTest {
-    private static final List<String> SKIPPED = Arrays.asList("class", "kode");
-    private Class<?> cls;
+    private static final Set<String> SKIPPED = Set.of("class", "kode");
 
-    public SjekkDtoStrukturTest(Class<?> cls) {
-        this.cls = cls;
+    @ParameterizedTest
+    @MethodSource("parameters")
+    public void skal_ha_riktig_navn_på_properties_i_dto_eller_konfiguret_med_annotations(Class<?> cls) throws Exception {
+        sjekkJsonProperties(cls);
     }
 
-    @Parameterized.Parameters
     public static Collection<Object[]> parameters() throws URISyntaxException {
+        List<Object[]> params = new ArrayList<>();
+
         IndexClasses indexClasses;
-        indexClasses = IndexClasses.getIndexFor(IndexClasses.class.getProtectionDomain().getCodeSource().getLocation().toURI());
-        List<Class<?>> classes = indexClasses.getClasses(
-                ci -> ci.name().toString().endsWith("Dto"),
+        indexClasses = IndexClasses.getIndexFor(
+                IndexClasses.class.getProtectionDomain().getCodeSource().getLocation().toURI());
+        List<Class<?>> classes = indexClasses.getClasses(ci -> ci.name().toString().endsWith("Dto"),
                 c -> !c.isInterface());
 
-        List<Object[]> params = new ArrayList<>();
-        for (int i = 0; i < classes.size(); i++) {
-            params.add(new Object[]{classes.get(i)});
+        for (Class<?> aClass : classes) {
+            params.add(new Object[]{aClass});
         }
         return params;
     }
 
-    @Test
-    public void skal_ha_riktig_navn_på_properties_i_dto_eller_konfiguret_med_annotations() throws Exception {
-        sjekkJsonProperties(cls);
-    }
-
     private void sjekkJsonProperties(Class<?> c) throws IntrospectionException {
-        List<Field> fields = Arrays.asList(c.getDeclaredFields());
+        List<Field> fields = List.of(c.getDeclaredFields());
         Set<String> fieldNames = fields.stream()
                 .filter(f -> !f.isSynthetic() && !Modifier.isStatic(f.getModifiers()))
                 .filter(f -> f.getAnnotation(JsonProperty.class) == null)
                 .filter(f -> f.getAnnotation(JsonValue.class) == null)
                 .filter(f -> f.getAnnotation(JsonIgnore.class) == null)
-                .map(f -> f.getName()).collect(Collectors.toSet());
+                .map(Field::getName)
+                .collect(Collectors.toSet());
 
         if (!fieldNames.isEmpty()) {
             for (PropertyDescriptor prop : Introspector.getBeanInfo(c, c.getSuperclass()).getPropertyDescriptors()) {
@@ -67,11 +61,11 @@ public class SjekkDtoStrukturTest {
                     Method readName = prop.getReadMethod();
                     String propName = prop.getName();
                     if (!SKIPPED.contains(propName)) {
-                        if (readName.getAnnotation(JsonIgnore.class) == null
-                                && readName.getAnnotation(JsonProperty.class) == null) {
+                        if (readName.getAnnotation(JsonIgnore.class) == null && readName.getAnnotation(
+                                JsonProperty.class) == null) {
                             Assertions.assertThat(propName)
-                                    .as("Gettere er ikke samstemt med felt i klasse, sørg for matchende bean navn og return type eller bruk @JsonProperty/@JsonIgnore/@JsonValue til å sette navn for json struktur: "
-                                            + c.getName())
+                                    .as("Gettere er ikke samstemt med felt i klasse, sørg for matchende bean navn og return type eller bruk @JsonProperty/@JsonIgnore/@JsonValue til å sette navn for json struktur: " + c
+                                            .getName())
                                     .isIn(fieldNames);
                         }
                     }
@@ -81,11 +75,11 @@ public class SjekkDtoStrukturTest {
                     Method readName = prop.getWriteMethod();
                     String propName = prop.getName();
                     if (!SKIPPED.contains(propName)) {
-                        if (readName.getAnnotation(JsonIgnore.class) == null
-                                && readName.getAnnotation(JsonProperty.class) == null) {
+                        if (readName.getAnnotation(JsonIgnore.class) == null && readName.getAnnotation(
+                                JsonProperty.class) == null) {
                             Assertions.assertThat(propName)
-                                    .as("Settere er ikke samstemt med felt i klasse, sørg for matchende bean navn og return type eller bruk @JsonProperty/@JsonIgnore/@JsonValue til å sette navn for json struktur: "
-                                            + c.getName())
+                                    .as("Settere er ikke samstemt med felt i klasse, sørg for matchende bean navn og return type eller bruk @JsonProperty/@JsonIgnore/@JsonValue til å sette navn for json struktur: " + c
+                                            .getName())
                                     .isIn(fieldNames);
                         }
                     }
